<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">e-banking-app</string>
    <string name="api_key">https://google.com.vn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="prompt_full_name">Full name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_email" tools:ignore="ExtraTranslation">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_not_have_account">You don\'t have an account yet? <u>Tap here!</u></string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_next">Next</string>
    <string name="error_message_fail_to_verify_phone_number">Fail to verify your phone number!</string>
    <string name="error_message_fail_to_send_otp">Can not send otp</string>
    <string name="error_message_password_do_not_match">Passwords do not match</string>
    <string name="message_code_sent_already">Otp has been sent to your phone number</string>
    <string name="action_verify">Verify</string>
    <string name="action_resend">Resend</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_full_name">Please input your full name</string>
    <string name="invalid_email">"Your email is invalid"</string>
    <string name="invalid_phone_number">Invalid Phone number</string>
    <string name="invalid_dob">Please select your dob</string>
    <string name="invalid_address">Please input your address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_2">Invalid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_flow">MainFlowActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="fail_to_register">Fail to register</string>
    <string name="fail_to_fetch_branch_list">Fail to fetch branch list</string>
    <string name="prompt_identity">Identity number</string>
    <string name="invalid_identity">Your identity number is invalid</string>
    <string name="access_token">access_token</string>
    <string name="logout">Logout</string>
    <string name="title_profile">Profile</string>
    <string name="title_balance">Balance</string>
    <string name="change_password">Change password</string>
    <string name="check_balance">Check balance</string>
    <string name="transfer">Transfer</string>
    <string name="electric_water_payment">Electricity water payment</string>
    <string name="passbook">Passbook</string>
    <string name="e_banking_app">E-banking App</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="update">Update</string>
    <string name="change_password_success">Change password successfully</string>
    <string name="change_password_failure">Change password fail!</string>
    <string name="card_management">Card management</string>
    <string name="prompt_pin">PIN</string>
    <string name="action_create">Create</string>
    <string name="action_add">Add</string>
    <string name="create_card_successfully">Create card successfully</string>
    <string name="create_card_fail">Create card fail</string>
    <string name="error_pin_empty">Invalid PIN</string>
    <string name="fetch_card_list_error">Fail to fetch card list</string>
    <string name="error_fail_to_fetch_passbook_list">Fail to fetch passbook list</string>
    <string name="error_fail_to_fetch_passbook_category_list">Fail to fetch category list</string>
    <string name="fail_to_fetch_profile">Fail to get profile</string>
    <string name="change_language">Change language</string>
    <string name="save">Save</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="english" translatable="false">English</string>
    <string name="period">Period</string>
    <string name="promp_amount">Amount</string>
    <string name="month">Months</string>
    <string name="add_passbook_success">Create card successfully</string>
    <string name="add_passbook_error">Add passbook fail!!</string>
    <string name="fail_to_check_phone_number">Fail!!</string>
    <string name="registered_phone_number">This phone number has been registered</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="action_send">Send</string>
    <string name="send_forgot_password_mail_succesfully">Sen forgot password mail successfully</string>
    <string name="fail_to_send_forgot_password_mail">Fail to send forgot password mail</string>
    <string name="register_successfully">Register successfully</string>
    <string name="action_internal_transfer">Internal transfer</string>
    <string name="action_interbank_transfer">External transfer</string>
    <string name="recipient_account_number">Recipient account number</string>
    <string name="prompt_message">Message</string>
    <string name="action_confirm">Confirm</string>
    <string name="invalid_account_number">Invalid account number</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="invalid_message">Invalid message</string>
    <string name="prompt_beneficiary_bank">Beneficiary bank</string>
    <string name="transfer_successfully">Transfer successfully</string>
    <string name="transfer_failure">Fail to transfer!!</string>
    <string name="successful_transfer">Successful transfer</string>
    <string name="successful_transfer_message">Giao dịch được gửi qua hệ thốgn chuyển tiền liên ngân hàng của NHNN. Thời gian người hưởng nhận được tiền phụ thuộc vào thời gian xử lý của hệ thống chuyển tiền liên ngân hàng và của ngân hàng hưởng</string>
    <string name="receiver_name">Receiver name</string>
    <string name="beneficiary_bank">Beneficiary bank</string>
    <string name="transaction_code">Transaction code</string>
    <string name="transfer_message">Transfer content</string>
    <string name="action_back_to_home">Back to home</string>
    <string name="bill_payment">Bill payment</string>
    <string name="topup">Topup</string>
    <string name="gift">Gift</string>
    <string name="hotel">Hotel booking</string>
    <string name="cinema">Cinema booking</string>
    <string name="airline_booking">Airline booking</string>
    <string name="citizen_identity_card">Citizen identity card:</string>
    <string name="address_info">Address:</string>
    <string name="phone_info">Phone:</string>
    <string name="created_at">Created at:</string>
    <string name="create_card">Create card</string>
    <string name="create_passbook">Create passbook</string>
    <string name="info">Information</string>
    <string name="language">Language</string>
    <string name="passbook_name">Passbook name</string>
    <string name="passbook_period">Passbook period</string>
    <string name="passbook_interest">Passbook interest</string>
    <string name="input_password">Input password</string>
    <string name="register">Register</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="register_with_phone_number">Register with phone number</string>
    <string name="id" translatable="false">ID</string>
    <string name="account_balance">Account balance</string>
    <string name="account_number">Account number:</string>
    <string name="fail_to_fetch_balance">Fail to fetch balance</string>
    <string name="account_number_sc">Account:</string>
    <string name="transaction_amount_sc">Transaction amount:</string>
    <string name="current_balance_sc">Current balance:</string>
    <string name="transaction_content">Transaction content:</string>
    <string name="select_branch">Select branch</string>
    <string name="bill_name">Bill name:</string>
    <string name="bill_unit">Unit:</string>
    <string name="bill_status">Bill status:</string>
    <string name="bill_amount">Amount:</string>
    <string name="fail_to_fetch_bill_list">Fail to fetch bills</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="bill_detail">Bill detail</string>
    <string name="pay">Pay</string>
    <string name="pay_successfully">Pay successfully</string>
    <string name="pay_fail">Fail to pay</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_successfully">Withdraw successfully</string>
    <string name="fail_to_withdraw">Fail to withdraw</string>
</resources>