<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.e_banking_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_balance"
        android:name="com.example.e_banking_app.ui.balance.BalanceFragment"
        android:label="@string/title_balance"
        tools:layout="@layout/fragment_balance" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.e_banking_app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.example.e_banking_app.ui.change_password.ChangePasswordFragment"
        android:label="fragment_change_password"
        tools:layout="@layout/fragment_change_password" />

</navigation>